--- a/MessageBoardSPA/css/style.css
+++ b/MessageBoardSPA/css/style.css
@@ -3,6 +3,7 @@ body {
   font-family: "Lato", sans-serif;
   -webkit-transition: background-color .5s;
   transition: background-color .5s;
+  background-color: #eef2ff;
 }
 
 /*側邊欄選擇器*/
@@ -37,7 +38,7 @@ body {
 
 /*側欄標籤和關閉按鈕光標的效果*/
 .sidenav a:hover, .offcanvas a:focus {
-  color: #f1f1f1;
+  color: #eef2ff;
 }
 
 /*側欄和關閉按鈕的位置選擇器*/
