--- a/MessageBoardSPA/css/style.css
+++ b/MessageBoardSPA/css/style.css
@@ -12,6 +12,18 @@ body {
   padding: 2px;
 }
 
+.reply {
+  display: none;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  padding: 20px;
+  border: 3px solid black;
+  background-color: #eef2ff;
+  z-index: 1002;
+  overflow: auto;
+}
+
 /*側邊欄選擇器*/
 .sidenav {
   height: 100%;
